--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mockups",
-  "homepage": "https://www.joshuaknauber.github.io/mockups",
+  "homepage": "https://mockups.joshuaknauber.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
