--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
+    "react-uuid": "^1.0.2",
     "three": "^0.134.0",
     "web-vitals": "^1.0.1"
   },
