--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/user-event": "^12.1.10",
     "canvas-to-image": "^2.2.0",
     "gh-pages": "^3.2.3",
+    "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-range": "^1.8.11",
     "react-scripts": "4.0.3",
     "react-uuid": "^1.0.2",
     "three": "^0.134.0",
